# payment-gateway-dashboard

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: auth_command.rs  mod.rs
src-tauri/src/command/card/: card_command.rs  card_trashed_command.rs  mod.rs
src-tauri/src/command/merchant/: merchant_command.rs  merchant_trashed_command.rs  mod.rs
src-tauri/src/command/role/: mod.rs  role_command.rs  role_trashed_command.rs
src-tauri/src/command/saldo/: mod.rs  saldo_command.rs  saldo_trashed_command.rs
src-tauri/src/command/topup/: mod.rs  topup_command.rs  topup_trashed_command.rs
src-tauri/src/command/transaction/: mod.rs  transaction_command.rs  transaction_trashed_command.rs
src-tauri/src/command/transfer/: mod.rs  transfer_command.rs  transfer_trashed_command.rs
src-tauri/src/command/user/: mod.rs  user_command.rs  user_trashed_command.rs
src-tauri/src/command/withdraw/: mod.rs  withdraw_command.rs  withdraw_trashed_command.rs
src-tauri/src/domain/requests/: mod.rs
src-tauri/src/domain/response/: card.rs  merchant.rs  mod.rs  role.rs  saldo.rs  topup.rs  transaction.rs  transfer.rs  user.rs  withdraw.rs
src-tauri/src/helpers/: api.rs  log_tracing.rs  mod.rs
src-tauri/src/model/: auth.rs  card.rs  merchant.rs  mod.rs  role.rs  saldo.rs  topup.rs  transaction.rs  transfer.rs  user.rs  withdraw.rs
src-tauri/src/service/: auth_service.rs  mod.rs
src-tauri/src/service/card/: card_service.rs  card_trashed_service.rs  mod.rs
src/helpers/: api.ts  (+7 more)
(+1068 files in other folders)
